--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.arastta"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.0.6"
+        versionCode 7
+        versionName "1.0.7"
     }
     buildTypes {
         release {
@@ -26,4 +26,5 @@ dependencies {
     compile files('libs/slider.jar')
     compile files('libs/android-query-full.0.25.10.jar')
     compile 'me.relex:circleindicator:1.2.1@aar'
+    compile 'com.jjoe64:graphview:4.2.1'
 }
